Cambio ID Commit

--- a/ProyectoCiclo3.App.Frontend/Pages/Buses/Create.cshtml
+++ b/ProyectoCiclo3.App.Frontend/Pages/Buses/Create.cshtml
@@ -4,8 +4,8 @@
  
 <div class="text-center">
 <form action="">
-  <label for="nombre" class="form-label">Nombre:</label>
-  <input type="text" class="form-control" id="nombre" name="nombre" placeholder="Nombre">
+  <label for="ID" class="form-label">ID:</label>
+  <input type="text" class="form-control" id="ID" name="ID" placeholder="ID">
   <label for="edad" class="form-label">Edad:</label>
   <input type="number" class="form-control" id="edad" name="edad" placeholder="Edad">
   <label for="email" class="form-label">Email:</label>
