--- a/ProyectoCiclo3.App.Frontend/Pages/Buses/Edit.cshtml
+++ b/ProyectoCiclo3.App.Frontend/Pages/Buses/Edit.cshtml
@@ -3,7 +3,8 @@
 @{
     var bus = Model.Bus;
 }
- 
+
+<h1>Edición de bus</h1>
 <div class="text-center">
 <form method="post">
   <label for="id" class="form-label">id:</label>
@@ -21,4 +22,5 @@
   <hr>
   <button type="submit" class="btn btn-success">Enviar</button>
 </form>
+<a asp-page="./List" class="btn btn-primary table-btn"><i class="fas fa-undo-alt"></i></a>
 </div>
