--- a/ProyectoCiclo3.App.Frontend/Pages/Buses/List.cshtml
+++ b/ProyectoCiclo3.App.Frontend/Pages/Buses/List.cshtml
@@ -3,7 +3,7 @@
 @{
 }
  
-<h1>Listado de Buses</h1>
+<h1>Buses de nuestra flota</h1>
 <table class="table">
     <thead>
         <th>Id</th>
@@ -24,15 +24,19 @@
             <td>@bus.numero_asientos</td>
             <td>@bus.placa</td>
             <td>
-              <a class="btn btn-info" asp-page="./Details" asp-route-busId="@bus.id"><i class="fas fa-adjust"></i>Ver</a>
-              <a class="btn btn-info" asp-page="./Edit" asp-route-busId="@bus.id">Editar</a>
+              @*<a class="btn btn-info" asp-page="./Details" asp-route-busId="@bus.id"><i class="fas fa-adjust"></i>Ver</a>*@
+              <a class="btn btn-primary table-btn" asp-page="./Details" asp-route-busId="@bus.id">
+                  <i class="fas fa-eye"></i>
+              </a>
+              @*<a class="btn btn-info" asp-page="./Edit" asp-route-busId="@bus.id">Editar</a>*@
+              <a class="btn btn-primary table-btn" asp-page="./Edit" asp-route-busId="@bus.id">
+                  <i class="fas fa-edit" aria-hidden="true"></i>
+              </a>
               <form method="POST">
-            <input type="number" class="form-control d-none" id="id" name="id" placeholder="id" asp-for="@bus.id">
-              <button type="submit"class="btn btn-danger" href="">Eliminar</button>
-            </form>
-
-              </td>
+              <input type="number" class="form-control d-none" id="id" name="id" placeholder="id" asp-for="@bus.id">
+                  <button type="submit"class="btn btn-danger" href=""><i class="fas fa-trash-alt"></i></button>
+              </form>
+            </td>
         </tr>
     }
 </table>
-
