--- a/ProyectoCiclo3.App.Frontend/Pages/Buses/Create.cshtml
+++ b/ProyectoCiclo3.App.Frontend/Pages/Buses/Create.cshtml
@@ -5,8 +5,8 @@
  
 <div class="text-center">
 <form method="post">
-  <label for="id" class="form-label">id:</label>
-  <input type="number" class="form-control" id="id" name="id" placeholder="id">
+  @*<label for="id" class="form-label">id:</label>
+  <input type="number" class="form-control" id="id" name="id" placeholder="id">*@
   <label for="Marca" class="form-label">Marca:</label>
   <input type="text" class="form-control" id="marca" name="marca" placeholder="Marca">
   <label for="Modelo" class="form-label">Modelo:</label>
@@ -20,4 +20,5 @@
   <hr>
   <button type="submit" class="btn btn-success">Enviar</button>
 </form>
+<a asp-page="./List" class="btn btn-primary table-btn"><i class="fas fa-undo-alt"></i></a>
 </div>
