commit botones ver/editar/eliminar rutas

--- a/ProyectoCiclo3.App.Frontend/Pages/Buses/Create.cshtml
+++ b/ProyectoCiclo3.App.Frontend/Pages/Buses/Create.cshtml
@@ -3,6 +3,7 @@
 @{
 }
  
+<h1>Registro de Bus</h1>
 <div class="text-center">
 <form method="post">
   @*<label for="id" class="form-label">id:</label>
