--- a/ProyectoCiclo3.App.Frontend/Pages/Buses/List.cshtml
+++ b/ProyectoCiclo3.App.Frontend/Pages/Buses/List.cshtml
@@ -26,15 +26,15 @@
             <td>
               @*<a class="btn btn-info" asp-page="./Details" asp-route-busId="@bus.id"><i class="fas fa-adjust"></i>Ver</a>*@
               <a class="btn btn-primary table-btn" asp-page="./Details" asp-route-busId="@bus.id">
-                  <i class="fas fa-eye"></i>
+                  <i class="fas fa-eye" title="Ver"></i>
               </a>
               @*<a class="btn btn-info" asp-page="./Edit" asp-route-busId="@bus.id">Editar</a>*@
               <a class="btn btn-primary table-btn" asp-page="./Edit" asp-route-busId="@bus.id">
-                  <i class="fas fa-edit" aria-hidden="true"></i>
+                  <i class="fas fa-edit" aria-hidden="true" title="Editar"></i>
               </a>
               <form method="POST">
               <input type="number" class="form-control d-none" id="id" name="id" placeholder="id" asp-for="@bus.id">
-                  <button type="submit"class="btn btn-danger" href=""><i class="fas fa-trash-alt"></i></button>
+                  <button type="submit"class="btn btn-danger" href=""><i class="fas fa-trash-alt" title="¡ELIMINAR!"></i></button>
               </form>
             </td>
         </tr>
