--- a/ProyectoCiclo3.App.Frontend/Pages/Rutas/Create.cshtml
+++ b/ProyectoCiclo3.App.Frontend/Pages/Rutas/Create.cshtml
@@ -2,7 +2,8 @@
 @model ProyectoCiclo3.App.Frontend.Pages.FormBusModel
 @{
 }
- 
+
+<h1>Registro de Rutas</h1>
 <div class="text-center">
 <form method="post">
   @*<label for="id" class="form-label">id:</label>
@@ -13,7 +14,8 @@
   <input type="number" class="form-control" id="destino" name="destino" placeholder="Destino">
   <label for="Tiempo_estimado" class="form-label">Tiempo_estimado:</label>
   <input type="number" class="form-control" id="tiempo_estimado" name="tiempo_estimado" placeholder="Tiempo_estimado">
-    <hr>
+  <hr>
   <button type="submit" class="btn btn-success">Enviar</button>
 </form>
+<a asp-page="./List" class="btn btn-primary table-btn"><i class="fas fa-undo-alt"></i></a>
 </div>
