--- a/ProyectoCiclo3.App.Frontend/Pages/Rutas/Edit.cshtml
+++ b/ProyectoCiclo3.App.Frontend/Pages/Rutas/Edit.cshtml
@@ -3,7 +3,8 @@
 @{
     var ruta = Model.Ruta;
 }
- 
+
+<h1>Edición de Rutas</h1>
 <div class="text-center">
 <form method="post">
   <label for="id" class="form-label">id:</label>
@@ -17,4 +18,5 @@
   <hr>
   <button type="submit" class="btn btn-success">Guardar</button>
 </form>
+<a asp-page="./List" class="btn btn-primary table-btn"><i class="fas fa-undo-alt"></i></a>
 </div>
