--- a/ProyectoCiclo3.App.Frontend/Pages/Buses/Edit.cshtml
+++ b/ProyectoCiclo3.App.Frontend/Pages/Buses/Edit.cshtml
@@ -7,8 +7,8 @@
 <h1>Edición de bus</h1>
 <div class="text-center">
 <form method="post">
-  <label for="id" class="form-label">id:</label>
-  <input type="number" class="form-control" id="id" name="id" placeholder="id" asp-for="@bus.id">
+  @*<label for="id" class="form-label">id:</label>
+  <input type="number" class="form-control" id="id" name="id" placeholder="id" asp-for="@bus.id">*@
   <label for="Marca" class="form-label">Marca:</label>
   <input type="text" class="form-control" id="marca" name="marca" placeholder="Marca" asp-for="@bus.marca">
   <label for="Modelo" class="form-label">Modelo:</label>
@@ -18,7 +18,7 @@
   <label for="Número de asientos" class="form-label">Número de asientos:</label>
   <input type="number" class="form-control" id="numero_asiento" name="numero_asiento" placeholder="Número de asientos" asp-for="@bus.numero_asientos">
   <label for="Placa" class="form-label">Placa:</label>
-  <input type="text" class="form-control" id="Placa" name="placa" placeholder="placa" asp-for="@bus.placa">
+  <input type="text" class="form-control" id="Placa" name="placa" placeholder="placa" asp-for="@bus.placa" readonly>
   <hr>
   <button type="submit" class="btn btn-success">Enviar</button>
 </form>
