--- a/ProyectoCiclo3.App.Frontend/Pages/Rutas/Create.cshtml
+++ b/ProyectoCiclo3.App.Frontend/Pages/Rutas/Create.cshtml
@@ -1,9 +1,9 @@
 @page
-@model ProyectoCiclo3.App.Frontend.Pages.FormBusModel
+@model ProyectoCiclo3.App.Frontend.Pages.FormRutaModel
 @{
 }
 
-<h1>Registro de Rutas</h1>
+<h1>Registra la nueva Ruta</h1>
 <div class="text-center">
 <form method="post">
   @*<label for="id" class="form-label">id:</label>
