--- a/ProyectoCiclo3.App.Frontend/Pages/Estaciones/Create.cshtml
+++ b/ProyectoCiclo3.App.Frontend/Pages/Estaciones/Create.cshtml
@@ -1,24 +1,20 @@
 @page
+@model ProyectoCiclo3.App.Frontend.Pages.FormEstacionModel
 @{
 }
  
 <div class="text-center">
-<form action="">
+<form method="POST">
   <label for="id" class="form-label">id:</label>
-  <input type="number" class="form-control" id="id" name="id" placeholder="ID">
-
+  <input type="number" class="form-control" id="id" name="id" placeholder="id">
   <label for="nombre" class="form-label">Nombre:</label>
   <input type="text" class="form-control" id="nombre" name="nombre" placeholder="Nombre">
-
-  <label for="direccion" class="form-label">Dirección:</label>
+  <label for="direccion" class="form-label">Direccion:</label>
   <input type="text" class="form-control" id="direccion" name="direccion" placeholder="Direccion">
-
-  <label for="coordx" class="form-label">Coordenada X:</label>
-  <input type="number" class="form-control" id="coordx" name="coordx" placeholder="Coordenada x">
-
-  <label for="coordy" class="form-label">Coordenada Y:</label>
-  <input type="number" class="form-control" id="coordx" name="coordx" placeholder="Coordenada y">
-
+  <label for="coord_x" class="form-label">Coordenada X:</label>
+  <input type="number" class="form-control" id="coord_x" name="coord_x" placeholder="Coord. x">
+  <label for="coord_y" class="form-label">Coordenada Y:</label>
+  <input type="number" class="form-control" id="coord_y" name="coord_y" placeholder="Coord. y">
   <label for="tipo" class="form-label">Tipo:</label>
   <input type="text" class="form-control" id="tipo" name="tipo" placeholder="Tipo">
   <hr>
