--- a/ProyectoCiclo3.App.Frontend/Pages/Estaciones/List.cshtml
+++ b/ProyectoCiclo3.App.Frontend/Pages/Estaciones/List.cshtml
@@ -1,34 +1,35 @@
 @page
+@model ProyectoCiclo3.App.Frontend.Pages.ListEstacionModel
 @{
 }
  
-<table class="table table-hover">
-  <thead>
-    <tr>
-      <th scope="col">#</th>
-      <th scope="col">First</th>
-      <th scope="col">Last</th>
-      <th scope="col">Handle</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <th scope="row">1</th>
-      <td>Mark</td>
-      <td>Otto</td>
-      <td>Twitter</td>
-    </tr>
-    <tr>
-      <th scope="row">2</th>
-      <td>Jacob</td>
-      <td>Thornton</td>
-      <td>Facebook</td>
-    </tr>
-    <tr>
-      <th scope="row">3</th>
-      <td>Larry the Bird</td>
-      <td>Arias</td>
-      <td>Instagram</td>
-    </tr>
-  </tbody>
+<h1>Listado de Estaciones</h1>
+<table class="table">
+    <thead>
+        <th>Id</th>
+        <th>Nombre</th>
+        <th>Direccion</th>
+        <th>Coordenada X</th>
+        <th>Coordenada Y</th>
+        <th>Tipo</th>
+    </thead>
+    @foreach (var estacion in Model.Estaciones)
+    {
+        <tr>
+            <td>@estacion.id</td>
+            <td>@estacion.nombre</td>
+            <td>@estacion.direccion</td>
+            <td>@estacion.coord_x</td>
+            <td>@estacion.coord_y</td>
+            <td>@estacion.tipo</td>
+            <td>
+              <a class="btn btn-info" asp-page="./Details" asp-route-estacionId="@estacion.id"><i class="fas fa-adjust"></i>Ver</a>
+              <a class="btn btn-info" asp-page="./Edit" asp-route-estacionId="@estacion.id">Editar</a>
+            <form method="POST">
+            <input type="number" class="form-control d-none" id="id" name="id" placeholder="id" asp-for="@estacion.id">
+              <button type="submit"class="btn btn-danger" href="">Eliminar</button>
+            </form>
+              </td>
+        </tr>
+    }
 </table>
