Commit correcciones editar y crear buses

--- a/ProyectoCiclo3.App.Frontend/Pages/Estaciones/Create.cshtml
+++ b/ProyectoCiclo3.App.Frontend/Pages/Estaciones/Create.cshtml
@@ -5,8 +5,8 @@
  
 <div class="text-center">
 <form method="POST">
-  <label for="id" class="form-label">id:</label>
-  <input type="number" class="form-control" id="id" name="id" placeholder="id">
+  @*<label for="id" class="form-label">id:</label>
+  <input type="number" class="form-control" id="id" name="id" placeholder="id">*@
   <label for="nombre" class="form-label">Nombre:</label>
   <input type="text" class="form-control" id="nombre" name="nombre" placeholder="Nombre">
   <label for="direccion" class="form-label">Direccion:</label>
