--- a/ProyectoCiclo3.App.Frontend/Pages/Buses/Create.cshtml
+++ b/ProyectoCiclo3.App.Frontend/Pages/Buses/Create.cshtml
@@ -7,19 +7,18 @@
 <div class="text-center">
 <form method="post">
   @*<label for="id" class="form-label">id:</label>
-  <input type="number" class="form-control" id="id" name="id" placeholder="id">*@
-  <label for="Marca" class="form-label">Marca:</label>
-  <input type="text" class="form-control" id="marca" name="marca" placeholder="Marca" required>
-  <label for="Modelo" class="form-label">Modelo:</label>
-  <input type="number" class="form-control" id="modelo" name="modelo" placeholder="Modelo" required maxlength="4" minlenght="4">
-  <label for="Kilometraje" class="form-label">Kilometraje:</label>
-  <input type="number" class="form-control" id="kilometraje" name="kilometraje" placeholder="Kilometraje" required>
-  <label for="Número de asientos" class="form-label">Número de asientos:</label>
-  <input type="number" class="form-control" id="numero_asientos" name="numero_asientos" placeholder="Número de asientos" required>
-  <label for="Placa" class="form-label">Placa:</label>
-  <input type="text" class="form-control" id="placa" name="placa" placeholder="Placa" required maxlength="6" minlenght="6">
+  <input type="number" class="form-control" id="id" name="id" placeholder="ID">*@
+  <label for="marca" class="form-label">Marca:</label>
+  <input type="text" class="form-control" id="marca" name="marca" placeholder="Marca">
+  <label for="modelo" class="form-label">Modelo:</label>
+  <input type="number" class="form-control" id="modelo" name="modelo" placeholder="Modelo">
+  <label for="kilometraje" class="form-label">Kilometraje:</label>
+  <input type="number" class="form-control" id="kilometraje" name="kilometraje" placeholder="Kilometraje">
+  <label for="numero_asientos" class="form-label">Número de asientos:</label>
+  <input type="number" class="form-control" id="numero_asientos" name="numero_asientos" placeholder="Número de asientos">
+  <label for="placa" class="form-label">Placa:</label>
+  <input type="text" class="form-control" id="placa" name="placa" placeholder="Placa">
   <hr>
   <button type="submit" class="btn btn-success">Enviar</button>
 </form>
-<a asp-page="./List" class="btn btn-primary table-btn"><i class="fas fa-undo-alt"></i></a>
 </div>
