--- a/ProyectoCiclo3.App.Frontend/Pages/Buses/List.cshtml
+++ b/ProyectoCiclo3.App.Frontend/Pages/Buses/List.cshtml
@@ -3,14 +3,16 @@
 @{
 }
  
-<h1>Buses de nuestra flota</h1>
+<h1>Buses</h1>
+
+<div class="text-center">
 <table class="table">
-    <thead>
+    <thead class="table-dark">
         <th>Id</th>
         <th>Marca</th>
         <th>Modelo</th>
         <th>Kilometraje</th>
-        <th>Numero de asiento</th>
+        <th>Número de asiento</th>
         <th>Placa</th>
         <th>Acciones</th>
     </thead>
@@ -24,19 +26,18 @@
             <td>@bus.numero_asientos</td>
             <td>@bus.placa</td>
             <td>
-              @*<a class="btn btn-info" asp-page="./Details" asp-route-busId="@bus.id"><i class="fas fa-adjust"></i>Ver</a>*@
-              <a class="btn btn-primary table-btn" asp-page="./Details" asp-route-busId="@bus.id">
-                  <i class="fas fa-eye" title="Ver"></i>
-              </a>
-              @*<a class="btn btn-info" asp-page="./Edit" asp-route-busId="@bus.id">Editar</a>*@
-              <a class="btn btn-primary table-btn" asp-page="./Edit" asp-route-busId="@bus.id">
-                  <i class="fas fa-edit" aria-hidden="true" title="Editar"></i>
-              </a>
-              <form method="POST">
-              <input type="number" class="form-control d-none" id="id" name="id" placeholder="id" asp-for="@bus.id">
-                  <button type="submit"class="btn btn-danger" href=""><i class="fas fa-trash-alt" title="¡ELIMINAR!"></i></button>
-              </form>
+                <a class="btn btn-primary table-btn" asp-page="./Details" asp-route-busId="@bus.id"><i class="fas fa-eye" title="Ver"></i></a>
+                <a class="btn btn-primary table-btn" asp-page="./Edit" asp-route-busId="@bus.id"><i class="fas fa-edit" aria-hidden="true" title="Editar"></i></a>
+                <a>
+                    <form method="POST">
+                        <input type="number" class="form-control d-none" id="id" name="id" placeholder="id" asp-for="@bus.id">
+                        <button type="submit"class="btn btn-danger" href="">
+                        <i class="fas fa-trash-alt" title="Eliminar"></i></button>
+                </form>
+                </a>
             </td>
         </tr>
     }
 </table>
+</div>
+
