--- a/ProyectoCiclo3.App.Frontend/Pages/Estaciones/Create.cshtml
+++ b/ProyectoCiclo3.App.Frontend/Pages/Estaciones/Create.cshtml
@@ -2,22 +2,43 @@
 @model ProyectoCiclo3.App.Frontend.Pages.FormEstacionModel
 @{
 }
- 
-<div class="text-center">
+
+<h1>Registrar Estación</h1>
 <form method="POST">
+
   @*<label for="id" class="form-label">id:</label>
   <input type="number" class="form-control" id="id" name="id" placeholder="id">*@
-  <label for="nombre" class="form-label">Nombre:</label>
-  <input type="text" class="form-control" id="nombre" name="nombre" placeholder="Nombre">
-  <label for="direccion" class="form-label">Direccion:</label>
-  <input type="text" class="form-control" id="direccion" name="direccion" placeholder="Direccion">
-  <label for="coord_x" class="form-label">Coordenada X:</label>
-  <input type="number" class="form-control" id="coord_x" name="coord_x" placeholder="Coord. x">
-  <label for="coord_y" class="form-label">Coordenada Y:</label>
-  <input type="number" class="form-control" id="coord_y" name="coord_y" placeholder="Coord. y">
-  <label for="tipo" class="form-label">Tipo:</label>
-  <input type="text" class="form-control" id="tipo" name="tipo" placeholder="Tipo">
-  <hr>
-  <button type="submit" class="btn btn-success">Enviar</button>
+  <div class="form-row">
+    <div class="form-group col-md-6">
+      <label for="nombre">Nombre:</label>
+      <input type="text" class="form-control" id="nombre" name="nombre" placeholder="Nombre" Required>
+    </div>
+    <div class="form-group col-md-6">
+      <label for="direccion">Dirección:</label>
+      <input type="text" class="form-control" id="direccion" name="direccion" placeholder="Direccion" Required>
+    </div>
+  </div>
+  
+  <div class="form-row">
+    <div class="form-group col-md-6">
+      <label for="coord_x" class="form-label">Coordenada X:</label>
+      <input type="number" class="form-control" id="coord_x" name="coord_x" placeholder="Coordenada X" Required>
+    </div>
+    <div class="form-group col-md-6">
+      <label for="coord_y" class="form-label">Coordenada Y:</label>
+      <input type="number" class="form-control" id="coord_y" name="coord_y" placeholder="Coordenada Y" Required>
+    </div>
+  </div>
+
+  <div class="form">
+    <label for="tipo" class="form-label">Tipo:</label>
+    <input type="text" class="form-control" id="tipo" name="tipo" placeholder="Tipo">
+  </div>
+
+  <div>
+    <button type="submit" class="btn btn-success">Enviar</button>
+    <a asp-page="./List" class="btn btn-primary table-btn"><i class="fas fa-undo-alt"></i></a>
+  </div>
+
+
 </form>
-</div>
