--- a/ProyectoCiclo3.App.Frontend/Pages/Estaciones/List.cshtml
+++ b/ProyectoCiclo3.App.Frontend/Pages/Estaciones/List.cshtml
@@ -3,15 +3,18 @@
 @{
 }
  
-<h1>Listado de Estaciones</h1>
+<h1>Estaciones</h1>
+
+<div class="text-center">
 <table class="table">
-    <thead>
+    <thead class="table-dark">
         <th>Id</th>
         <th>Nombre</th>
         <th>Direccion</th>
         <th>Coordenada X</th>
         <th>Coordenada Y</th>
         <th>Tipo</th>
+        <th>Acciones</th>
     </thead>
     @foreach (var estacion in Model.Estaciones)
     {
@@ -23,13 +26,16 @@
             <td>@estacion.coord_y</td>
             <td>@estacion.tipo</td>
             <td>
-              <a class="btn btn-info" asp-page="./Details" asp-route-estacionId="@estacion.id"><i class="fas fa-adjust"></i>Ver</a>
-              <a class="btn btn-info" asp-page="./Edit" asp-route-estacionId="@estacion.id">Editar</a>
-            <form method="POST">
-            <input type="number" class="form-control d-none" id="id" name="id" placeholder="id" asp-for="@estacion.id">
-              <button type="submit"class="btn btn-danger" href="">Eliminar</button>
-            </form>
+              <a class="btn btn-primary table-btn" asp-page="./Details" asp-route-estacionId="@estacion.id"><i class="fas fa-eye" title="Ver"></i></a>
+              <a class="btn btn-primary table-btn" asp-page="./Edit" asp-route-estacionId="@estacion.id"><i class="fas fa-edit" aria-hidden="true" title="Editar"></i></a>
+              <a>
+                <form method="POST">
+                  <input type="number" class="form-control d-none" id="id" name="id" placeholder="id" asp-for="@estacion.id">
+                  <button type="submit"class="btn btn-danger" href=""><i class="fas fa-trash-alt" title="Eliminar"></i></button>
+                </form>
+              </a>
               </td>
         </tr>
     }
 </table>
+</div>
