--- a/ProyectoCiclo3.App.Frontend/Pages/Rutas/Create.cshtml
+++ b/ProyectoCiclo3.App.Frontend/Pages/Rutas/Create.cshtml
@@ -3,19 +3,32 @@
 @{
 }
 
-<h1>Registra la nueva Ruta</h1>
-<div class="text-center">
+<h1>Registra Ruta</h1>
+
 <form method="post">
   @*<label for="id" class="form-label">id:</label>
   <input type="number" class="form-control" id="id" name="id" placeholder="id">*@
-  <label for="Origen" class="form-label">Origen:</label>
-  <input type="number" class="form-control" id="origen" name="origen" placeholder="Origen">
-  <label for="Destino" class="form-label">Destino:</label>
-  <input type="number" class="form-control" id="destino" name="destino" placeholder="Destino">
-  <label for="Tiempo_estimado" class="form-label">Tiempo_estimado:</label>
-  <input type="number" class="form-control" id="tiempo_estimado" name="tiempo_estimado" placeholder="Tiempo_estimado">
-  <hr>
-  <button type="submit" class="btn btn-success">Enviar</button>
+  <div class="form-row">
+    <div class="form-group col-md-4">
+      <label for="Origen" class="form-label">Origen:</label>
+      <input type="number" class="form-control" id="origen" name="origen" placeholder="Origen" Required>
+    </div>
+    <div class="form-group col-md-4">
+      <label for="Destino" class="form-label">Destino:</label>
+      <input type="number" class="form-control" id="destino" name="destino" placeholder="Destino" Required>
+    </div>
+    <div class="form-group col-md-4">
+      <label for="Tiempo_estimado" class="form-label">Tiempo estimado:</label>
+      <input type="number" class="form-control" id="tiempo_estimado" name="tiempo_estimado" placeholder="Tiempo estimado" Required>
+    </div>
+  </div>
+  
+  <div>
+    <button type="submit" class="btn btn-success">Enviar</button>
+    <a asp-page="./List" class="btn btn-primary table-btn"><i class="fas fa-undo-alt"></i></a>
+  </div>
+
+
 </form>
-<a asp-page="./List" class="btn btn-primary table-btn"><i class="fas fa-undo-alt"></i></a>
-</div>
+
+
