--- a/ProyectoCiclo3.App.Frontend/Pages/Rutas/Edit.cshtml
+++ b/ProyectoCiclo3.App.Frontend/Pages/Rutas/Edit.cshtml
@@ -4,7 +4,7 @@
     var ruta = Model.Ruta;
 }
 
-<h1>Edición de Rutas</h1>
+@*<h1>Edición de Rutas</h1>
 <div class="text-center">
 <form method="post">
   <label for="id" class="form-label">id:</label>
@@ -19,4 +19,34 @@
   <button type="submit" class="btn btn-success">Guardar</button>
 </form>
 <a asp-page="./List" class="btn btn-primary table-btn"><i class="fas fa-undo-alt"></i></a>
-</div>
+</div>*@
+
+<h1>Editar Ruta</h1>
+
+<form method="post">
+  <div class="form-row">
+    <div class="form-group col-md-3">
+      <label for="id" class="form-label">id:</label>
+      <input type="number" class="form-control" id="id" placeholder="id" asp-for="@ruta.id" readonly>
+    </div>
+    <div class="form-group col-md-3">
+      <label for="Origen" class="form-label">Origen:</label>
+      <input type="number" class="form-control" id="origen" placeholder="Origen" asp-for="@ruta.origen" Required>
+    </div>
+    <div class="form-group col-md-3">
+      <label for="Destino" class="form-label">Destino:</label>
+      <input type="number" class="form-control" id="destino" placeholder="Destino" asp-for="@ruta.destino" Required>
+    </div>
+    <div class="form-group col-md-3">
+      <label for="Tiempo_estimado" class="form-label">Tiempo estimado:</label>
+      <input type="number" class="form-control" id="tiempo_estimado" placeholder="Tiempo estimado" asp-for="@ruta.tiempo_estimado" Required>
+    </div>
+  </div>
+  
+  <div>
+    <button type="submit" class="btn btn-success">Enviar</button>
+    <a asp-page="./List" class="btn btn-primary table-btn"><i class="fas fa-undo-alt"></i></a>
+  </div>
+
+
+</form>
