--- a/ProyectoCiclo3.App.Frontend/Pages/Estaciones/List.cshtml
+++ b/ProyectoCiclo3.App.Frontend/Pages/Estaciones/List.cshtml
@@ -30,7 +30,7 @@
               <a class="btn btn-primary table-btn" asp-page="./Edit" asp-route-estacionId="@estacion.id"><i class="fas fa-edit" aria-hidden="true" title="Editar"></i></a>
               <a>
                 <form method="POST">
-                  <input type="number" class="form-control d-none" id="id" name="id" placeholder="id" asp-for="@estacion.id">
+                  <input type="hidden" class="form-control d-none" id="id" name="id" placeholder="id" asp-for="@estacion.id">
                   <button type="submit"class="btn btn-danger" href=""><i class="fas fa-trash-alt" title="Eliminar"></i></button>
                 </form>
               </a>
