--- a/ProyectoCiclo3.App.Frontend/Pages/Shared/_Layout.cshtml
+++ b/ProyectoCiclo3.App.Frontend/Pages/Shared/_Layout.cshtml
@@ -14,6 +14,11 @@
 
     <nav class="navbar navbar-inverse">
     <div class="container-fluid">
+        @using Microsoft.AspNetCore.Identity
+        @inject SignInManager<IdentityUser> SignInManager
+        @if (SignInManager.IsSignedIn(User))
+        {
+
     <ul class="nav navbar-nav">
       <li class="active"><a class="navbar-brand" asp-area="" asp-page="/Index">TRANSFOUR SAS</a></li>
         <li class="dropdown"><a class="dropdown-toggle" asp-area="" data-toggle="dropdown" >Buses <i class="fa fa-bus blue-color " ></i><span class="caret"></span></a>
@@ -38,6 +43,9 @@
             </ul>
         </li>
         </ul>
+        }
+        @Html.Partial("_LoginPartial")
+
     </div>
     </nav>
     </header>
