--- a/ProyectoCiclo3.App.Frontend/Pages/Rutas/Create.cshtml
+++ b/ProyectoCiclo3.App.Frontend/Pages/Rutas/Create.cshtml
@@ -7,28 +7,38 @@
 
 <form method="post">
   @*<label for="id" class="form-label">id:</label>
-  <input type="number" class="form-control" id="id" name="id" placeholder="id">*@
+    <input type="number" class="form-control" id="id" name="id" placeholder="id">*@
   <div class="form-row">
     <div class="form-group col-md-4">
       <label for="Origen" class="form-label">Origen:</label>
-      <input type="number" class="form-control" id="origen" name="origen" placeholder="Origen" Required>
+      <select name="origen" class="form-control">
+        <option value="">-</option>
+        @foreach (var Estacion in Model.Estaciones)
+        {
+          <option value="@Estacion.id">@Estacion.nombre - @Estacion.direccion</option>
+        }
+      </select>
     </div>
     <div class="form-group col-md-4">
       <label for="Destino" class="form-label">Destino:</label>
-      <input type="number" class="form-control" id="destino" name="destino" placeholder="Destino" Required>
+      <select name="destino" class="form-control">
+        <option value="">-</option>
+        @foreach (var Estacion in Model.Estaciones)
+        {
+          <option value="@Estacion.id">@Estacion.nombre - @Estacion.direccion</option>
+        }
+      </select>
     </div>
     <div class="form-group col-md-4">
       <label for="Tiempo_estimado" class="form-label">Tiempo estimado:</label>
-      <input type="number" class="form-control" id="tiempo_estimado" name="tiempo_estimado" placeholder="Tiempo estimado" Required>
+      <input type="number" class="form-control" id="tiempo_estimado" placeholder="Tiempo estimado"
+        name="tiempo_estimado" Required>
     </div>
-  </div>
-  
-  <div>
-    <button type="submit" class="btn btn-success">Enviar</button>
-    <a asp-page="./List" class="btn btn-primary table-btn"><i class="fas fa-undo-alt"></i></a>
-  </div>
+
+    <div>
+      <button type="submit" class="btn btn-success">Enviar</button>
+      <a asp-page="./List" class="btn btn-primary table-btn"><i class="fas fa-undo-alt"></i></a>
+    </div>
 
 
 </form>
-
-
