--- a/ProyectoCiclo3.App.Frontend/Pages/Rutas/Edit.cshtml
+++ b/ProyectoCiclo3.App.Frontend/Pages/Rutas/Edit.cshtml
@@ -27,19 +27,19 @@
   <div class="form-row">
     <div class="form-group col-md-3">
       <label for="id" class="form-label">id:</label>
-      <input type="number" class="form-control" id="id" placeholder="id" asp-for="@ruta.id" readonly>
+      <input type="number" class="form-control" id="id" placeholder="id" name="id" readonly>
     </div>
     <div class="form-group col-md-3">
       <label for="Origen" class="form-label">Origen:</label>
-      <input type="number" class="form-control" id="origen" placeholder="Origen" asp-for="@ruta.origen" Required>
+      <input type="number" class="form-control" id="origen" placeholder="Origen" name="origen" Required>
     </div>
     <div class="form-group col-md-3">
       <label for="Destino" class="form-label">Destino:</label>
-      <input type="number" class="form-control" id="destino" placeholder="Destino" asp-for="@ruta.destino" Required>
+      <input type="number" class="form-control" id="destino" placeholder="Destino" name="destino" Required>
     </div>
     <div class="form-group col-md-3">
       <label for="Tiempo_estimado" class="form-label">Tiempo estimado:</label>
-      <input type="number" class="form-control" id="tiempo_estimado" placeholder="Tiempo estimado" asp-for="@ruta.tiempo_estimado" Required>
+      <input type="number" class="form-control" id="tiempo_estimado" placeholder="Tiempo estimado" name="tiempo_estimado" Required>
     </div>
   </div>
   
