--- a/ProyectoCiclo3.App.Frontend/Pages/Rutas/List.cshtml
+++ b/ProyectoCiclo3.App.Frontend/Pages/Rutas/List.cshtml
@@ -19,8 +19,8 @@
     {
         <tr>
             <td>@ruta.id</td>
-            <td>@ruta.origen</td>
-            <td>@ruta.destino</td>
+            <td>@ruta.origen.nombre</td>
+            <td>@ruta.destino.nombre</td>
             <td>@ruta.tiempo_estimado</td>
             <td>
               <a class="btn btn-primary table-btn" asp-page="./Details" asp-route-rutaId="@ruta.id"><i class="fas fa-eye" title="Ver"></i></a>
