--- a/ProyectoCiclo3.App.Frontend/Pages/Rutas/List.cshtml
+++ b/ProyectoCiclo3.App.Frontend/Pages/Rutas/List.cshtml
@@ -1,38 +1,39 @@
 @page
 @model ProyectoCiclo3.App.Frontend.Pages.ListRutaModel
 @{
-    
+
 }
- 
+
 <h1>Rutas</h1>
 
 <div class="text-center">
-<table class="table">
-    <thead class="table-dark">
-        <th>Id</th>
-        <th>Origen</th>
-        <th>Destino</th>
-        <th>Tiempo_estimado</th>
-        <th>Acciones</th>
-    </thead>
-    @foreach (var ruta in Model.Rutas)
-    {
-        <tr>
-            <td>@ruta.id</td>
-            <td>@ruta.origen.nombre</td>
-            <td>@ruta.destino.nombre</td>
-            <td>@ruta.tiempo_estimado</td>
-            <td>
-              <a class="btn btn-primary table-btn" asp-page="./Details" asp-route-rutaId="@ruta.id"><i class="fas fa-eye" title="Ver"></i></a>
-              <a class="btn btn-primary table-btn" asp-page="./Edit" asp-route-rutaId="@ruta.id"><i class="fas fa-edit" aria-hidden="true" title="Editar"></i>
-              </a>
-              <form method="POST">
-              <input type="hidden" class="form-control d-none" id="id" name="id" placeholder="id" asp-for="@ruta.id">
-                  <button type="submit"class="btn btn-danger" href=""><i class="fas fa-trash-alt" title="Eliminar"></i></button>
-              </form>
-            </td>
-        </tr>
-    }
-</table>
-</div>
+    <table class="table">
+        <thead class="table-dark">
+            <th>Id</th>
+            <th>Origen</th>
+            <th>Destino</th>
+            <th>Tiempo_estimado</th>
+            <th>Acciones</th>
+        </thead>
+        @foreach (var ruta in Model.Rutas)
+        {
+            <tr>
+                <td>@ruta.id</td>
+                <td>@ruta.origen.nombre</td>
+                <td>@ruta.destino.nombre</td>
+                <td>@ruta.tiempo_estimado</td>
 
+                <td>
+              <a class="btn btn-primary table-btn" asp-page="./Details" asp-route-estacionId="@ruta.id"><i class="fas fa-eye" title="Ver"></i></a>
+              <a class="btn btn-primary table-btn" asp-page="./Edit" asp-route-estacionId="@ruta.id"><i class="fas fa-edit" aria-hidden="true" title="Editar"></i></a>
+              <a>
+                <form method="POST">
+                  <input type="hidden" class="form-control d-none" id="id" name="id" placeholder="id" asp-for="@ruta.id">
+                  <button type="submit"class="btn btn-danger" href=""><i class="fas fa-trash-alt" title="Eliminar"></i></button>
+                </form>
+              </a>
+              </td>
+            </tr>
+        }
+    </table>
+</div>
